--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>Marc Foster - PhD Candidate</title>
+    <style>
+        body {
+            font-family: Helvetica, Arial, sans-serif;
+            text-align: center;
+            margin-top: 50px;
+        }
+
+        img {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        p {
+            font-size: 1.2em;
+            color: #555;
+        }
+
+        .title {
+            font-size: 1.5em;
+            color: #777;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Welcome to My GitHub Page!</h1>
-    <p>This is my personal webpage hosted on GitHub Pages.</p>
+    <!-- Profile Picture -->
+    <img src="marc-foster.jpg" alt="Marc Foster">
+
+    <!-- Name and Title -->
+    <h1>Marc Foster</h1>
+    <p class="title">PhD Candidate, Massachusetts Institute of Technology - Woods Hole Oceanographic Institution Joint Program, Environmental Chemistry</p>
 </body>
+
 </html>
+
+
