--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     img {
       width: 200px;
       height: auto;
-      border-radius: 50%;
+      border: 5px solid #333;
+      border-radius: 0;
     }
 
     h1 {
