--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Marc Foster - PhD Candidate</title>
+  <title>Marc Foster - Ph.D. Candidate</title>
   <style>
     body {
       font-family: Helvetica, Arial, sans-serif;
@@ -40,7 +40,9 @@
 
   <!-- Name and Title -->
   <h1>Marc Foster</h1>
-  <p class="title">PhD Candidate, Massachusetts Institute of Technology - Woods Hole Oceanographic Institution Joint Program, Environmental Chemistry</p>
+  <p class="title">Ph.D. Candidate </p>
+   <p>Massachusetts Institute of Technology - Woods Hole Oceanographic Institution Joint Program </p> 
+  <p>Environmental Chemistry</p>
 
 </body>
 </html>
