--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
    <p>Massachusetts Institute of Technology - Woods Hole Oceanographic Institution Joint Program </p> 
   <p>Environmental Chemistry</p>
 
+  <!-- Google Scholar Link -->
+  <div class="scholar-link">
+    <a href="https://scholar.google.com/citations?user=O4dazRoAAAAJ&hl=en" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/66/Google_Scholar_logo_2015.png" alt="Google Scholar">
+    </a>
+  </div>
+
 </body>
 </html>
 
