--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
     </a>
   </div>
 
+  <!-- LinkedIn Link -->
+    <a href="https://www.linkedin.com/in/marc-foster-238a35102/" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/LinkedIn_logo_initials.png" alt="LinkedIn">
+    </a>
+  </div>
+
 </body>
 </html>
 
