--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
   <!-- Google Scholar Link -->
   <div class="scholar-link">
     <a href="https://scholar.google.com/citations?user=O4dazRoAAAAJ&hl=en" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/66/Google_Scholar_logo_2015.png" alt="Google Scholar">
+      <img src="Google_Scholar_logo.png" alt="Google Scholar">
     </a>
   </div>
 
   <!-- LinkedIn Link -->
     <a href="https://www.linkedin.com/in/marc-foster-238a35102/" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/LinkedIn_logo_initials.png" alt="LinkedIn">
+      <img src="LinkedIn_logo_initials.png" alt="LinkedIn">
     </a>
   </div>
 
