--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
     </a>
   </div>
 
+  <!-- CV Link -->
+  <a href="Marc_Foster_CV_2025.pdf" target="_blank">Download my CV</a>
+
 </body>
 </html>
 
