--- a/index.html
+++ b/index.html
@@ -31,6 +31,30 @@
       font-size: 1.5em;
       color: #777;
     }
+
+    a {
+      font-size: 1.2em;
+      color: #555;
+      text-decoration: none;
+      margin-top: 20px;
+      display: block;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .social-icons {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .social-icons img {
+      width: 30px; /* Adjust size of the icons */
+      height: 30px; /* Maintain square shape */
+    }
   </style>
 </head>
 <body>
@@ -40,18 +64,15 @@
 
   <!-- Name and Title -->
   <h1>Marc Foster</h1>
-  <p class="title">Ph.D. Candidate </p>
-   <p>Massachusetts Institute of Technology - Woods Hole Oceanographic Institution Joint Program </p> 
+  <p class="title">Ph.D. Candidate</p>
+  <p>Massachusetts Institute of Technology - Woods Hole Oceanographic Institution Joint Program</p>
   <p>Environmental Chemistry</p>
 
-  <!-- Google Scholar Link -->
-  <div class="scholar-link">
+  <!-- Social Media Links -->
+  <div class="social-icons">
     <a href="https://scholar.google.com/citations?user=O4dazRoAAAAJ&hl=en" target="_blank">
       <img src="Google_Scholar_logo.png" alt="Google Scholar">
     </a>
-  </div>
-
-  <!-- LinkedIn Link -->
     <a href="https://www.linkedin.com/in/marc-foster-238a35102/" target="_blank">
       <img src="LinkedIn_logo_initials.png" alt="LinkedIn">
     </a>
