--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   </div>
 
   <!-- CV Link -->
-  <a href="Marc_Foster_CV_2025.pdf" target="_blank">Download my CV</a>
+  <a href="Marc_Foster_CV_2025.pdf" target="_blank">CV</a>
 
 </body>
 </html>
