--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     .social-icons img {
       width: 30px; /* Adjust size of the icons */
       height: 30px; /* Maintain square shape */
+      border: none;
     }
   </style>
 </head>
