--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Marc Foster, Ph.D. Candidate at MIT-WHOI, specializing in Environmental Chemistry.">
+  <meta name="keywords" content="Marc Foster, PhD, MIT, Woods Hole, Environmental Chemistry, Google Scholar, LinkedIn, CV">
+  <meta name="author" content="Marc Foster">
   <title>Marc Foster - Ph.D. Candidate</title>
   <style>
     body {
