--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Marc Foster, Ph.D. Candidate at MIT-WHOI, specializing in Environmental Chemistry.">
   <meta name="keywords" content="Marc Foster, PhD, MIT, Woods Hole, Environmental Chemistry, Google Scholar, LinkedIn, CV">
   <meta name="author" content="Marc Foster">
@@ -57,8 +55,8 @@
     }
 
     .social-icons img {
-      width: 30px; /* Adjust size of the icons */
-      height: 30px; /* Maintain square shape */
+      width: 30px;
+      height: 30px;
       border: none;
     }
   </style>
@@ -74,6 +72,11 @@
   <p>Massachusetts Institute of Technology - Woods Hole Oceanographic Institution Joint Program</p>
   <p>Environmental Chemistry</p>
 
+  <!-- Description -->
+  <p>Hi! My name is Marc Foster. I am a fourth year Ph.D. candidate in the MIT/WHOI Joint Program. I work with <a href="https://scholar.google.com/citations?user=frpKM2EAAAAJ&hl=en" target="_blank">Dr. Desirée Plata</a> in the Civil and Environmental Engineering department at MIT. My work focuses on understanding the microbiology of polymer biodegradation. My interests are interdisciplinary but span environmental chemistry, biogeochemistry, and microbiology. I have previously received a Masters of Science in physical chemistry from the University of Oregon where I worked with <a href="https://scholar.google.com/citations?user=hPWTDRQAAAAJ&hl=en" target="_blank">Dr. Geraldine Richmond</a>. I received my Bachelors of Arts in Biochemistry, Biophysics, and Molecular Biology from Whitman College. Contact me here if you would like to get in touch!</p>
+
+  <p>Outside of lab I like to train for half-marathons, swim (mostly when I am injured), hike, cook, bake, read, and hang with my cat.</p>
+
   <!-- Social Media Links -->
   <div class="social-icons">
     <a href="https://scholar.google.com/citations?user=O4dazRoAAAAJ&hl=en" target="_blank">
@@ -85,7 +88,7 @@
   </div>
 
   <!-- CV Link -->
-  <a href="Marc_Foster_CV_2025.pdf" target="_blank">CV</a>
+  <a href="Marc_Foster_CV_2025.pdf" target="_blank">Download my CV</a>
 
 </body>
 </html>
