--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     p {
       font-size: 1.2em;
       color: #555;
+      text-align: justify; /* Justify text for all paragraphs */
+      margin: 0 auto;
+      max-width: 800px; /* Optionally limit the width of paragraphs */
     }
 
     .title {
@@ -73,7 +76,7 @@
   <p>Environmental Chemistry</p>
 
   <!-- Description -->
-  <p>Hi! My name is Marc Foster. I am a fourth year Ph.D. candidate in the MIT/WHOI Joint Program. I work with <a href="https://scholar.google.com/citations?user=frpKM2EAAAAJ&hl=en" target="_blank">Dr. Desirée Plata</a> in the Civil and Environmental Engineering department at MIT. My work focuses on understanding the microbiology of polymer biodegradation. My interests are interdisciplinary but span environmental chemistry, biogeochemistry, and microbiology. I have previously received a Masters of Science in physical chemistry from the University of Oregon where I worked with <a href="https://scholar.google.com/citations?user=hPWTDRQAAAAJ&hl=en" target="_blank">Dr. Geraldine Richmond</a>. I received my Bachelors of Arts in Biochemistry, Biophysics, and Molecular Biology from Whitman College. <a href="mailto:fosterm@mit.edu">Contact me here</a> if you would like to get in touch!</p>
+  <p>Hi! My name is Marc Foster. I am a fourth year Ph.D. candidate in the MIT/WHOI Joint Program. I work with <span>Dr. Desirée Plata</span> in the Civil and Environmental Engineering department at MIT. My work focuses on understanding the microbiology of polymer biodegradation. My interests are interdisciplinary but span environmental chemistry, biogeochemistry, and microbiology. I have previously received a Masters of Science in physical chemistry from the University of Oregon where I worked with <span>Dr. Geraldine Richmond</span>. I received my Bachelors of Arts in Biochemistry, Biophysics, and Molecular Biology from Whitman College. <a href="mailto:fosterm@mit.edu">Contact me here</a> if you would like to get in touch!</p>
 
   <p>Outside of lab I like to train for half-marathons, swim (mostly when I am injured), hike, cook, bake, read, and hang with my cat.</p>
 
@@ -92,4 +95,5 @@
 
 </body>
 </html>
+
 
