--- a/index.html
+++ b/index.html
@@ -26,8 +26,24 @@
     }
 
     p {
+      font-size: 2em;
+      color: #555;
+      text-align: center; /* Justify text for all paragraphs */
+      margin: 0 auto;
+      max-width: 800px; /* Optionally limit the width of paragraphs */
+    }
+
+    m {
       font-size: 1.2em;
       color: #555;
+      text-align: justify; /* Justify text for all paragraphs */
+      margin: 0 auto;
+      max-width: 800px; /* Optionally limit the width of paragraphs */
+    }
+
+    i {
+      font-size: 1.2em;
+      color: #008000;
       text-align: justify; /* Justify text for all paragraphs */
       margin: 0 auto;
       max-width: 800px; /* Optionally limit the width of paragraphs */
@@ -76,9 +92,9 @@
   <p>Environmental Chemistry</p>
 
   <!-- Description -->
-  <p>Hi! My name is Marc Foster. I am a fourth year Ph.D. candidate in the MIT/WHOI Joint Program. I work with <a href="https://scholar.google.com/citations?user=frpKM2EAAAAJ&hl=en" target="_blank">Dr. Desirée Plata</a> in the Civil and Environmental Engineering department at MIT. My work focuses on understanding the microbiology of polymer biodegradation. My interests are interdisciplinary but span environmental chemistry, biogeochemistry, and microbiology. I have previously received a Masters of Science in physical chemistry from the University of Oregon where I worked with <a href="https://scholar.google.com/citations?user=hPWTDRQAAAAJ&hl=en" target="_blank">Dr. Geraldine Richmond</a>. I received my Bachelors of Arts in Biochemistry, Biophysics, and Molecular Biology from Whitman College. <a href="mailto:fosterm@mit.edu">Contact me here</a> if you would like to get in touch!</p>
+  <m>Hi! My name is Marc Foster. I am a fourth year Ph.D. candidate in the MIT/WHOI Joint Program. I work with <i href="https://scholar.google.com/citations?user=frpKM2EAAAAJ&hl=en" target="_blank">Dr. Desirée Plata</i> in the Civil and Environmental Engineering department at MIT. My work focuses on understanding the microbiology of polymer biodegradation. My interests are interdisciplinary but span environmental chemistry, biogeochemistry, and microbiology. I have previously received a Masters of Science in physical chemistry from the University of Oregon where I worked with <i href="https://scholar.google.com/citations?user=hPWTDRQAAAAJ&hl=en" target="_blank">Dr. Geraldine Richmond</i>. I received my Bachelors of Arts in Biochemistry, Biophysics, and Molecular Biology from Whitman College. <i href="mailto:fosterm@mit.edu">Contact me here</i> if you would like to get in touch!</m>
 
-  <p>Outside of lab I like to train for half-marathons, swim (mostly when I am injured), hike, cook, bake, read, and hang with my cat.</p>
+  <m>Outside of lab I like to <i href=" https://www.strava.com/athletes/29012833" target="_blank">train for half-marathons</i>, swim (mostly when I am injured), hike, cook, bake, <i href="https://www.goodreads.com/user/show/164854933-marc-foster" target="_blank">read</i>, and hang with my <i href="momo.png" target="_blank">cat</i>.</m>
 
   <!-- Social Media Links -->
   <div class="social-icons">
@@ -91,7 +107,7 @@
   </div>
 
   <!-- CV Link -->
-  <a href="Marc_Foster_CV_2025.pdf" target="_blank">Download my CV</a>
+  <a href="Marc_Foster_CV_2025.pdf" target="_blank">CV</a>
 
 </body>
 </html>
