--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     h1 {
       color: #333;
-      font-size: 2em; /* Larger font for the title */
+      font-size: 2em; /* Larger font for the name */
       text-align: center;
     }
 
@@ -97,8 +97,8 @@
   <!-- Name and Title -->
   <h1>Marc Foster</h1>
   <p class="title">Ph.D. Candidate</p>
-  <p>Massachusetts Institute of Technology - Woods Hole Oceanographic Institution Joint Program</p>
-  <p>Environmental Chemistry</p>
+  <p class="title">Massachusetts Institute of Technology - Woods Hole Oceanographic Institution Joint Program</p>
+  <p class="title">Environmental Chemistry</p>
 
   <!-- Description -->
   <p>Hi! My name is Marc Foster. I am a fourth-year Ph.D. candidate in the MIT/WHOI Joint Program. I work with <a href="https://scholar.google.com/citations?user=frpKM2EAAAAJ&hl=en" class="desiree-link" target="_blank">Dr. Desirée Plata</a> in the Civil and Environmental Engineering department at MIT. My work focuses on understanding the microbiology of polymer biodegradation. My interests are interdisciplinary but span environmental chemistry, biogeochemistry, and microbiology. I have previously received a Masters of Science in physical chemistry from the University of Oregon where I worked with <a href="https://scholar.google.com/citations?user=hPWTDRQAAAAJ&hl=en" class="richmond-link" target="_blank">Dr. Geraldine Richmond</a>. I received my Bachelors of Arts in Biochemistry, Biophysics, and Molecular Biology from Whitman College. <a href="mailto:fosterm@mit.edu" class="contact-link">Contact me here</a> if you would like to get in touch!</p>
@@ -121,8 +121,5 @@
 </body>
 </html>
 
-
-</body>
-</html>
 
 
