--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
 
     /* Links for titles or other references */
     .desiree-link, .richmond-link, .contact-link {
-      color: #008000;
-      font-weight: bold;
-      text-decoration: none;
+      font-size: 1.2em; /* Set the base font size */
+      color: ##008000;
+      text-align: justify; /* Justify text */
+      margin: 0 auto;
+      max-width: 800px;
     }
 
     .desiree-link:hover, .richmond-link:hover, .contact-link:hover {
@@ -103,7 +105,7 @@
   <!-- Description -->
   <p>Hi! My name is Marc Foster. I am a fourth-year Ph.D. candidate in the MIT/WHOI Joint Program. I work with <a href="https://scholar.google.com/citations?user=frpKM2EAAAAJ&hl=en" class="desiree-link" target="_blank">Dr. Desirée Plata</a> in the Civil and Environmental Engineering department at MIT. My work focuses on understanding the microbiology of polymer biodegradation. My interests are interdisciplinary but span environmental chemistry, biogeochemistry, and microbiology. I have previously received a Masters of Science in physical chemistry from the University of Oregon where I worked with <a href="https://scholar.google.com/citations?user=hPWTDRQAAAAJ&hl=en" class="richmond-link" target="_blank">Dr. Geraldine Richmond</a>. I received my Bachelors of Arts in Biochemistry, Biophysics, and Molecular Biology from Whitman College. <a href="mailto:fosterm@mit.edu" class="contact-link">Contact me here</a> if you would like to get in touch!</p>
 
-  <p>Outside of lab I like to <a href="https://www.strava.com/athletes/29012833" target="_blank">train for half-marathons</a>, swim (mostly when I am injured), hike, cook, bake, <a href="https://www.goodreads.com/user/show/164854933-marc-foster" target="_blank">read</a>, and hang with my <a href="momo.png" target="_blank">cat</a>.</p>
+  <p>Outside of lab I like to <a href="https://www.strava.com/athletes/29012833" class="desiree-link" target="_blank">train for half-marathons</a>, swim (mostly when I am injured), hike, cook, bake, <a href="https://www.goodreads.com/user/show/164854933-marc-foster" class="desiree-link" target="_blank">read</a>, and hang with my <a href="momo.png" class="desiree-link" target="_blank">cat</a>.</p>
 
   <!-- Social Media Links -->
   <div class="social-icons">
