--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     /* Links for titles or other references */
     .desiree-link, .richmond-link, .contact-link {
       font-size: 1.2em; /* Set the base font size */
-      color: ##008000;
+      color: #008000;
       text-align: justify; /* Justify text */
       margin: 0 auto;
       max-width: 800px;
