--- a/index.html
+++ b/index.html
@@ -54,15 +54,12 @@
 
     /* Links for titles or other references */
     .desiree-link, .richmond-link, .contact-link {
-      font-size: 1.2em; /* Set the base font size */
-      color: #008000;
-      text-align: justify; /* Justify text */
-      margin: 0 auto;
-      max-width: 800px;
+      color: #008000; /* Green color for the links */
+      text-decoration: none; /* Remove underline */
     }
 
     .desiree-link:hover, .richmond-link:hover, .contact-link:hover {
-      text-decoration: underline;
+      text-decoration: underline; /* Underline on hover */
     }
 
     .social-icons {
@@ -122,6 +119,7 @@
 
 </body>
 </html>
+
 
 
 
