--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     }
 
     .title {
-      font-size: 1.4em; /* Slightly larger title */
+      font-size: 1.6em; /* Slightly larger title */
       color: #333;
       text-align: center; /* Center the title */
     }
@@ -43,23 +43,13 @@
 
     /* Links inside paragraphs are colored green */
     p a {
-      color: #008000;
+      color: #008000; /* Green color for links */
       font-weight: bold;
       text-decoration: none;
     }
 
     p a:hover {
       text-decoration: underline;
-    }
-
-    /* Links for titles or other references */
-    .desiree-link, .richmond-link, .contact-link {
-      color: #008000; /* Green color for the links */
-      text-decoration: none; /* Remove underline */
-    }
-
-    .desiree-link:hover, .richmond-link:hover, .contact-link:hover {
-      text-decoration: underline; /* Underline on hover */
     }
 
     .social-icons {
@@ -100,9 +90,9 @@
   <p class="title">Environmental Chemistry</p>
 
   <!-- Description -->
-  <p>Hi! My name is Marc Foster. I am a fourth-year Ph.D. candidate in the MIT/WHOI Joint Program. I work with <a href="https://scholar.google.com/citations?user=frpKM2EAAAAJ&hl=en" class="desiree-link" target="_blank">Dr. Desirée Plata</a> in the Civil and Environmental Engineering department at MIT. My work focuses on understanding the microbiology of polymer biodegradation. My interests are interdisciplinary but span environmental chemistry, biogeochemistry, and microbiology. I have previously received a Masters of Science in physical chemistry from the University of Oregon where I worked with <a href="https://scholar.google.com/citations?user=hPWTDRQAAAAJ&hl=en" class="richmond-link" target="_blank">Dr. Geraldine Richmond</a>. I received my Bachelors of Arts in Biochemistry, Biophysics, and Molecular Biology from Whitman College. <a href="mailto:fosterm@mit.edu" class="contact-link">Contact me here</a> if you would like to get in touch!</p>
+  <p>Hi! My name is Marc Foster. I am a fourth-year Ph.D. candidate in the MIT/WHOI Joint Program. I work with <a href="https://scholar.google.com/citations?user=frpKM2EAAAAJ&hl=en" target="_blank">Dr. Desirée Plata</a> in the Civil and Environmental Engineering department at MIT. My work focuses on understanding the microbiology of polymer biodegradation. My interests are interdisciplinary but span environmental chemistry, biogeochemistry, and microbiology. I have previously received a Masters of Science in physical chemistry from the University of Oregon where I worked with <a href="https://scholar.google.com/citations?user=hPWTDRQAAAAJ&hl=en" target="_blank">Dr. Geraldine Richmond</a>. I received my Bachelors of Arts in Biochemistry, Biophysics, and Molecular Biology from Whitman College. <a href="mailto:fosterm@mit.edu">Contact me here</a> if you would like to get in touch!</p>
 
-  <p>Outside of lab I like to <a href="https://www.strava.com/athletes/29012833" class="desiree-link" target="_blank">train for half-marathons</a>, swim (mostly when I am injured), hike, cook, bake, <a href="https://www.goodreads.com/user/show/164854933-marc-foster" class="desiree-link" target="_blank">read</a>, and hang with my <a href="momo.png" class="desiree-link" target="_blank">cat</a>.</p>
+  <p>Outside of lab I like to <a href="https://www.strava.com/athletes/29012833" target="_blank">train for half-marathons</a>, swim (mostly when I am injured), hike, cook, bake, <a href="https://www.goodreads.com/user/show/164854933-marc-foster" target="_blank">read</a>, and hang with my <a href="momo.png" target="_blank">cat</a>.</p>
 
   <!-- Social Media Links -->
   <div class="social-icons">
