--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     }
 
     p {
-      font-size: 1.2em; /* Set the base font size */
+      font-size: 1.2em; /* Set the base font size for the paragraph */
       color: #555;
       text-align: justify; /* Justify text */
       margin: 0 auto;
@@ -44,7 +44,7 @@
     /* Links inside paragraphs are colored green */
     p a {
       color: #008000; /* Green color for links */
-      font-weight: bold;
+      font-weight: normal; /* Remove any extra boldness */
       text-decoration: none;
     }
 
@@ -109,6 +109,7 @@
 
 </body>
 </html>
+
 
 
 
