--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       max-width: 800px;
     }
 
-    /* Links inside paragraphs are colored green */
+    /* Links inside paragraphs are colored green and inherit the same font size */
     p a {
       color: #008000; /* Green color for links */
-      font-weight: normal; /* Remove any extra boldness */
+      font-size: inherit; /* Ensure links inherit the font size of the paragraph */
       text-decoration: none;
     }
 
