--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       color: #008000; /* Green color for links */
       font-size: inherit; /* Ensure links inherit the font size of the paragraph */
       text-decoration: none;
+      white-space: nowrap;
     }
 
     p a:hover {
