--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     }
 
     .title {
-      font-size: 1.4em; /* Slightly larger title */
+      font-size: 1.6em; /* Slightly larger title */
       color: #333;
       text-align: center; /* Center the title */
     }
@@ -39,14 +39,16 @@
       text-align: justify; /* Justify text */
       margin: 0 auto;
       max-width: 800px;
+      line-height: 1.5;
+      display: inline; /* Ensure links stay inline with text */
     }
 
-    /* Links inside paragraphs are colored green and inherit the same font size */
+    /* Links inside paragraphs should stay inline and have green color */
     p a {
       color: #008000; /* Green color for links */
-      font-size: inherit; /* Ensure links inherit the font size of the paragraph */
+      font-size: 1.2em; /* Ensure links have the same font size as paragraph */
       text-decoration: none;
-      white-space: nowrap;
+      display: inline; /* Prevent links from breaking into new lines */
     }
 
     p a:hover {
@@ -91,7 +93,7 @@
   <p class="title">Environmental Chemistry</p>
 
   <!-- Description -->
-  <p>Hi! My name is Marc Foster. I am a fourth-year Ph.D. candidate in the MIT/WHOI Joint Program. I work with <a href="https://scholar.google.com/citations?user=frpKM2EAAAAJ&hl=en" target="_blank">Dr. Desirée Plata</a> in the Civil and Environmental Engineering department at MIT. My work focuses on understanding the microbiology of polymer biodegradation. My interests are interdisciplinary but span environmental chemistry, biogeochemistry, and microbiology. I have previously received a Masters of Science in physical chemistry from the University of Oregon where I worked with <a href="https://scholar.google.com/citations?user=hPWTDRQAAAAJ&hl=en" target="_blank">Dr. Geraldine Richmond</a>. I received my Bachelors of Arts in Biochemistry, Biophysics, and Molecular Biology from Whitman College. <a href="mailto:fosterm@mit.edu">Contact me here</a> if you would like to get in touch!</p>
+  <p>Hi! My name is Marc Foster. I am a fourth-year Ph.D. candidate in the MIT/WHOI Joint Program. I work with <a href="https://scholar.google.com/citations?user=frpKM2EAAAAJ&hl=en" target="_blank">Dr. Desirée Plata</a> in the Civil and Environmental Engineering department at MIT. My work focuses on understanding the microbiology of polymer biodegradation. My interests are interdisciplinary and span environmental chemistry, biogeochemistry, and microbiology. I have previously received a Masters of Science in physical chemistry from the University of Oregon where I worked with <a href="https://scholar.google.com/citations?user=hPWTDRQAAAAJ&hl=en" target="_blank">Dr. Geraldine Richmond</a>. I received my Bachelors of Arts in Biochemistry, Biophysics, and Molecular Biology from Whitman College. <a href="mailto:fosterm@mit.edu">Contact me here</a> if you would like to get in touch!</p>
 
   <p>Outside of lab I like to <a href="https://www.strava.com/athletes/29012833" target="_blank">train for half-marathons</a>, swim (mostly when I am injured), hike, cook, bake, <a href="https://www.goodreads.com/user/show/164854933-marc-foster" target="_blank">read</a>, and hang with my <a href="momo.png" target="_blank">cat</a>.</p>
 
@@ -110,7 +112,6 @@
 
 </body>
 </html>
-
 
 
 
