--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <h1>Marc Foster</h1>
   <p class="title">Ph.D. Candidate</p>
   <br>
-  <p class="title">Massachusetts Institute of Technology - Woods Hole Oceanographic Institution Joint Program</p>
+  <p class="title">Massachusetts Institute of Technology - Woods Hole Oceanographic Institution</p>
   <br>
   <p class="title">Environmental Chemistry</p>
   <br>
