--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     body {
       font-family: Helvetica, Arial, sans-serif;
       margin-top: 50px;
-      text-align: center;
+    }
+
+    .container {
+      display: flex; /* Enable flexbox layout */
+      align-items: center; /* Align items vertically in the center */
+      justify-content: flex-start; /* Align items to the left */
+      max-width: 1200px; /* Max container width */
+      margin: 0 auto; /* Center the container */
+    }
+
+    .image-container {
+      flex: 0 0 200px; /* Set fixed width for the image container */
+      margin-right: 20px; /* Space between image and text */
     }
 
     img {
@@ -21,16 +33,19 @@
       border-radius: 0;
     }
 
+    .text-container {
+      flex: 1; /* Allow the text to take the remaining space */
+      text-align: left;
+    }
+
     h1 {
       color: #333;
       font-size: 2em; /* Larger font for the name */
-      text-align: center;
     }
 
     .title {
       font-size: 1.3em; /* Slightly larger title */
       color: #333;
-      text-align: center; /* Center the title */
     }
 
     p {
@@ -56,7 +71,7 @@
 
     .social-icons {
       display: flex;
-      justify-content: center;
+      justify-content: left;
       gap: 20px;
       margin-top: 20px;
     }
@@ -82,36 +97,44 @@
 </head>
 <body>
 
-  <!-- Profile Picture -->
-  <img src="IMG_0176.jpg" alt="Marc Foster">
+  <!-- Container to hold the image and text side by side -->
+  <div class="container">
 
-  <!-- Name and Title -->
-  <h1>Marc Foster</h1>
-  <p class="title">Ph.D. Candidate</p>
-  <br>
-  <p class="title">Massachusetts Institute of Technology - Woods Hole Oceanographic Institution</p>
-  <br>
-  <p class="title">Environmental Chemistry</p>
-  <br>
-  <!-- Description -->
-  <p>Hi! My name is Marc Foster. I am a fourth-year Ph.D. candidate in the MIT/WHOI Joint Program. I work with <a href="https://scholar.google.com/citations?user=frpKM2EAAAAJ&hl=en" target="_blank">Dr. Desirée Plata</a> in the Civil and Environmental Engineering department at MIT. My work focuses on understanding the microbiology of polymer biodegradation. My interests are interdisciplinary and span environmental chemistry, biogeochemistry, and microbiology. I have previously received a Masters of Science in physical chemistry from the University of Oregon where I worked with <a href="https://scholar.google.com/citations?user=hPWTDRQAAAAJ&hl=en" target="_blank">Dr. Geraldine Richmond</a>. I received my Bachelors of Arts in Biochemistry, Biophysics, and Molecular Biology from Whitman College. <a href="mailto:fosterm@mit.edu">Contact me here</a> if you would like to get in touch!</p>
-  <br>
-  <p>Outside of lab I like to <a href="https://www.strava.com/athletes/29012833" target="_blank">train for half-marathons</a>, swim (mostly when I am injured), hike, cook, bake, <a href="https://www.goodreads.com/user/show/164854933-marc-foster" target="_blank">read</a>, and hang with my <a href="momo.png" target="_blank">cat</a>.</p>
+    <!-- Profile Picture Container -->
+    <div class="image-container">
+      <img src="IMG_0176.jpg" alt="Marc Foster">
+    </div>
 
-  <!-- Social Media Links -->
-  <div class="social-icons">
-    <a href="https://scholar.google.com/citations?user=O4dazRoAAAAJ&hl=en" target="_blank">
-      <img src="Google_Scholar_logo.png" alt="Google Scholar">
-    </a>
-    <a href="https://www.linkedin.com/in/marc-foster-238a35102/" target="_blank">
-      <img src="LinkedIn_logo_initials.png" alt="LinkedIn">
-    </a>
-     <a href="Marc_Foster_CV_2025.pdf" target="_blank">CV</a>
+    <!-- Text Content Container -->
+    <div class="text-container">
+      <!-- Name and Title -->
+      <h1>Marc Foster</h1>
+      <p class="title">Ph.D. Candidate</p>
+      <br>
+      <p class="title">Massachusetts Institute of Technology - Woods Hole Oceanographic Institution</p>
+      <br>
+      <p class="title">Environmental Chemistry</p>
+      <br>
+      <!-- Description -->
+      <p>Hi! My name is Marc Foster. I am a fourth-year Ph.D. candidate in the MIT/WHOI Joint Program. I work with <a href="https://scholar.google.com/citations?user=frpKM2EAAAAJ&hl=en" target="_blank">Dr. Desirée Plata</a> in the Civil and Environmental Engineering department at MIT. My work focuses on understanding the microbiology of polymer biodegradation. My interests are interdisciplinary and span environmental chemistry, biogeochemistry, and microbiology. I have previously received a Masters of Science in physical chemistry from the University of Oregon where I worked with <a href="https://scholar.google.com/citations?user=hPWTDRQAAAAJ&hl=en" target="_blank">Dr. Geraldine Richmond</a>. I received my Bachelors of Arts in Biochemistry, Biophysics, and Molecular Biology from Whitman College. <a href="mailto:fosterm@mit.edu">Contact me here</a> if you would like to get in touch!</p>
+      <br>
+      <p>Outside of lab I like to <a href="https://www.strava.com/athletes/29012833" target="_blank">train for half-marathons</a>, swim (mostly when I am injured), hike, cook, bake, <a href="https://www.goodreads.com/user/show/164854933-marc-foster" target="_blank">read</a>, and hang with my <a href="momo.png" target="_blank">cat</a>.</p>
+
+      <!-- Social Media Links -->
+      <div class="social-icons">
+        <a href="https://scholar.google.com/citations?user=O4dazRoAAAAJ&hl=en" target="_blank">
+          <img src="Google_Scholar_logo.png" alt="Google Scholar">
+        </a>
+        <a href="https://www.linkedin.com/in/marc-foster-238a35102/" target="_blank">
+          <img src="LinkedIn_logo_initials.png" alt="LinkedIn">
+        </a>
+        <a href="Marc_Foster_CV_2025.pdf" target="_blank">CV</a>
+      </div>
+    </div>
+
   </div>
 
 </body>
 </html>
-
-
 
 
