--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
       justify-content: flex-start; /* Align items to the left */
       max-width: 1200px; /* Max container width */
       margin: 0 auto; /* Center the container */
+      position: relative; /* Allow absolute positioning for text and icons */
     }
 
     .image-container {
       flex: 0 0 200px; /* Set fixed width for the image container */
       margin-right: 20px; /* Space between image and text */
+      position: relative;
     }
 
     img {
@@ -41,6 +43,27 @@
     h1 {
       color: #333;
       font-size: 2em; /* Larger font for the name */
+      position: absolute; /* Position the name over the image */
+      top: 10px; /* Adjust top position */
+      left: 50%; /* Center horizontally */
+      transform: translateX(-50%); /* Offset the horizontal centering */
+    }
+
+    .social-icons {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+      position: absolute; /* Position icons over the image */
+      bottom: 10px; /* Adjust bottom position */
+      left: 50%; /* Center horizontally */
+      transform: translateX(-50%); /* Offset the horizontal centering */
+    }
+
+    .social-icons img {
+      width: 30px;
+      height: 30px;
+      border: none;
     }
 
     .title {
@@ -69,19 +92,6 @@
       text-decoration: underline;
     }
 
-    .social-icons {
-      display: flex;
-      justify-content: left;
-      gap: 20px;
-      margin-top: 20px;
-    }
-
-    .social-icons img {
-      width: 30px;
-      height: 30px;
-      border: none;
-    }
-
     a {
       font-size: 1.2em;
       color: #555;
@@ -103,24 +113,9 @@
     <!-- Profile Picture Container -->
     <div class="image-container">
       <img src="IMG_0176.jpg" alt="Marc Foster">
-    </div>
-
-    <!-- Text Content Container -->
-    <div class="text-container">
-      <!-- Name and Title -->
+      <!-- Name Overlay -->
       <h1>Marc Foster</h1>
-      <p class="title">Ph.D. Candidate</p>
-      <br>
-      <p class="title">Massachusetts Institute of Technology - Woods Hole Oceanographic Institution</p>
-      <br>
-      <p class="title">Environmental Chemistry</p>
-      <br>
-      <!-- Description -->
-      <p>Hi! My name is Marc Foster. I am a fourth-year Ph.D. candidate in the MIT/WHOI Joint Program. I work with <a href="https://scholar.google.com/citations?user=frpKM2EAAAAJ&hl=en" target="_blank">Dr. Desirée Plata</a> in the Civil and Environmental Engineering department at MIT. My work focuses on understanding the microbiology of polymer biodegradation. My interests are interdisciplinary and span environmental chemistry, biogeochemistry, and microbiology. I have previously received a Masters of Science in physical chemistry from the University of Oregon where I worked with <a href="https://scholar.google.com/citations?user=hPWTDRQAAAAJ&hl=en" target="_blank">Dr. Geraldine Richmond</a>. I received my Bachelors of Arts in Biochemistry, Biophysics, and Molecular Biology from Whitman College. <a href="mailto:fosterm@mit.edu">Contact me here</a> if you would like to get in touch!</p>
-      <br>
-      <p>Outside of lab I like to <a href="https://www.strava.com/athletes/29012833" target="_blank">train for half-marathons</a>, swim (mostly when I am injured), hike, cook, bake, <a href="https://www.goodreads.com/user/show/164854933-marc-foster" target="_blank">read</a>, and hang with my <a href="momo.png" target="_blank">cat</a>.</p>
-
-      <!-- Social Media Links -->
+      <!-- Social Media Links Overlay -->
       <div class="social-icons">
         <a href="https://scholar.google.com/citations?user=O4dazRoAAAAJ&hl=en" target="_blank">
           <img src="Google_Scholar_logo.png" alt="Google Scholar">
@@ -132,9 +127,25 @@
       </div>
     </div>
 
+    <!-- Text Content Container -->
+    <div class="text-container">
+      <!-- Name and Title -->
+      <p class="title">Ph.D. Candidate</p>
+      <br>
+      <p class="title">Massachusetts Institute of Technology - Woods Hole Oceanographic Institution</p>
+      <br>
+      <p class="title">Environmental Chemistry</p>
+      <br>
+      <!-- Description -->
+      <p>Hi! My name is Marc Foster. I am a fourth-year Ph.D. candidate in the MIT/WHOI Joint Program. I work with <a href="https://scholar.google.com/citations?user=frpKM2EAAAAJ&hl=en" target="_blank">Dr. Desirée Plata</a> in the Civil and Environmental Engineering department at MIT. My work focuses on understanding the microbiology of polymer biodegradation. My interests are interdisciplinary and span environmental chemistry, biogeochemistry, and microbiology. I have previously received a Masters of Science in physical chemistry from the University of Oregon where I worked with <a href="https://scholar.google.com/citations?user=hPWTDRQAAAAJ&hl=en" target="_blank">Dr. Geraldine Richmond</a>. I received my Bachelors of Arts in Biochemistry, Biophysics, and Molecular Biology from Whitman College. <a href="mailto:fosterm@mit.edu">Contact me here</a> if you would like to get in touch!</p>
+      <br>
+      <p>Outside of lab I like to <a href="https://www.strava.com/athletes/29012833" target="_blank">train for half-marathons</a>, swim (mostly when I am injured), hike, cook, bake, <a href="https://www.goodreads.com/user/show/164854933-marc-foster" target="_blank">read</a>, and hang with my <a href="momo.png" target="_blank">cat</a>.</p>
+
+    </div>
   </div>
 
 </body>
 </html>
+
 
 
