--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       color: #333;
       font-size: 2em; /* Larger font for the name */
       position: absolute; /* Position the name over the image */
-      top: 10px; /* Adjust top position */
+      top: 0; /* Align the name to the top of the image */
       left: 50%; /* Center horizontally */
       transform: translateX(-50%); /* Offset the horizontal centering */
     }
@@ -55,7 +55,7 @@
       gap: 20px;
       margin-top: 20px;
       position: absolute; /* Position icons over the image */
-      bottom: 10px; /* Adjust bottom position */
+      bottom: 0; /* Align the icons to the bottom of the image */
       left: 50%; /* Center horizontally */
       transform: translateX(-50%); /* Offset the horizontal centering */
     }
