--- a/index.html
+++ b/index.html
@@ -10,22 +10,25 @@
   <style>
     body {
       font-family: Helvetica, Arial, sans-serif;
-      margin-top: 50px;
+      margin: 0;
+      padding: 0;
+      height: 100%; /* Ensure the body takes full height of the screen */
+      position: relative;
+      text-align: center; /* Center content horizontally */
     }
 
     .container {
-      display: flex; /* Enable flexbox layout */
-      align-items: center; /* Align items vertically in the center */
-      justify-content: flex-start; /* Align items to the left */
-      max-width: 1200px; /* Max container width */
-      margin: 0 auto; /* Center the container */
-      position: relative; /* Allow absolute positioning for text and icons */
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 20px;
     }
 
     .image-container {
-      flex: 0 0 200px; /* Set fixed width for the image container */
-      margin-right: 20px; /* Space between image and text */
-      position: relative;
+      flex: 0 0 200px; /* Fixed width for the image */
+      margin-right: 20px; /* Space between the image and text */
     }
 
     img {
@@ -36,28 +39,27 @@
     }
 
     .text-container {
-      flex: 1; /* Allow the text to take the remaining space */
+      flex: 1;
       text-align: left;
     }
 
     h1 {
       color: #333;
       font-size: 2em; /* Larger font for the name */
-      position: absolute; /* Position the name over the image */
-      top: 0; /* Align the name to the top of the image */
-      left: 50%; /* Center horizontally */
-      transform: translateX(-50%); /* Offset the horizontal centering */
+      position: absolute; /* Position the name at the top */
+      top: 20px; /* Add a little space from the top */
+      left: 50%; /* Center the name horizontally */
+      transform: translateX(-50%); /* Correct horizontal centering */
     }
 
     .social-icons {
       display: flex;
       justify-content: center;
       gap: 20px;
-      margin-top: 20px;
-      position: absolute; /* Position icons over the image */
-      bottom: 0; /* Align the icons to the bottom of the image */
-      left: 50%; /* Center horizontally */
-      transform: translateX(-50%); /* Offset the horizontal centering */
+      position: absolute; /* Position the icons at the bottom */
+      bottom: 20px; /* Add space from the bottom */
+      left: 50%; /* Center the icons horizontally */
+      transform: translateX(-50%); /* Correct horizontal centering */
     }
 
     .social-icons img {
@@ -67,25 +69,24 @@
     }
 
     .title {
-      font-size: 1.3em; /* Slightly larger title */
+      font-size: 1.3em;
       color: #333;
     }
 
     p {
-      font-size: 1.2em; /* Set the base font size for the paragraph */
+      font-size: 1.2em;
       color: #555;
-      text-align: justify; /* Justify text */
+      text-align: justify;
       margin: 0 auto;
       max-width: 800px;
       line-height: 1.5;
     }
 
-    /* Links inside paragraphs should stay inline and have green color */
     p a {
-      color: #008000; /* Green color for links */
-      font-size: inherit; /* Ensure links have the same font size as paragraph */
+      color: #008000;
+      font-size: inherit;
       text-decoration: none;
-      display: inline; /* Prevent links from breaking into new lines */
+      display: inline;
     }
 
     p a:hover {
@@ -107,24 +108,12 @@
 </head>
 <body>
 
-  <!-- Container to hold the image and text side by side -->
+  <!-- Profile Picture and Content Container -->
   <div class="container">
 
     <!-- Profile Picture Container -->
     <div class="image-container">
       <img src="IMG_0176.jpg" alt="Marc Foster">
-      <!-- Name Overlay -->
-      <h1>Marc Foster</h1>
-      <!-- Social Media Links Overlay -->
-      <div class="social-icons">
-        <a href="https://scholar.google.com/citations?user=O4dazRoAAAAJ&hl=en" target="_blank">
-          <img src="Google_Scholar_logo.png" alt="Google Scholar">
-        </a>
-        <a href="https://www.linkedin.com/in/marc-foster-238a35102/" target="_blank">
-          <img src="LinkedIn_logo_initials.png" alt="LinkedIn">
-        </a>
-        <a href="Marc_Foster_CV_2025.pdf" target="_blank">CV</a>
-      </div>
     </div>
 
     <!-- Text Content Container -->
@@ -140,8 +129,18 @@
       <p>Hi! My name is Marc Foster. I am a fourth-year Ph.D. candidate in the MIT/WHOI Joint Program. I work with <a href="https://scholar.google.com/citations?user=frpKM2EAAAAJ&hl=en" target="_blank">Dr. Desirée Plata</a> in the Civil and Environmental Engineering department at MIT. My work focuses on understanding the microbiology of polymer biodegradation. My interests are interdisciplinary and span environmental chemistry, biogeochemistry, and microbiology. I have previously received a Masters of Science in physical chemistry from the University of Oregon where I worked with <a href="https://scholar.google.com/citations?user=hPWTDRQAAAAJ&hl=en" target="_blank">Dr. Geraldine Richmond</a>. I received my Bachelors of Arts in Biochemistry, Biophysics, and Molecular Biology from Whitman College. <a href="mailto:fosterm@mit.edu">Contact me here</a> if you would like to get in touch!</p>
       <br>
       <p>Outside of lab I like to <a href="https://www.strava.com/athletes/29012833" target="_blank">train for half-marathons</a>, swim (mostly when I am injured), hike, cook, bake, <a href="https://www.goodreads.com/user/show/164854933-marc-foster" target="_blank">read</a>, and hang with my <a href="momo.png" target="_blank">cat</a>.</p>
-
     </div>
+  </div>
+
+  <!-- Social Media Links -->
+  <div class="social-icons">
+    <a href="https://scholar.google.com/citations?user=O4dazRoAAAAJ&hl=en" target="_blank">
+      <img src="Google_Scholar_logo.png" alt="Google Scholar">
+    </a>
+    <a href="https://www.linkedin.com/in/marc-foster-238a35102/" target="_blank">
+      <img src="LinkedIn_logo_initials.png" alt="LinkedIn">
+    </a>
+    <a href="Marc_Foster_CV_2025.pdf" target="_blank">CV</a>
   </div>
 
 </body>
