--- a/index.html
+++ b/index.html
@@ -12,28 +12,29 @@
       font-family: Helvetica, Arial, sans-serif;
       margin: 0;
       padding: 0;
-      text-align: center;
+      text-align: left; /* Align text to the left */
     }
 
     .container {
       display: flex; /* Enable flexbox layout */
-      align-items: center; /* Align items vertically in the center */
-      justify-content: center; /* Center the container horizontally */
-      flex-direction: column; /* Arrange content vertically */
+      align-items: flex-start; /* Align items to the top */
+      justify-content: flex-start; /* Align items to the left */
+      flex-direction: column; /* Stack items vertically */
       max-width: 1200px; /* Max container width */
       margin: 0 auto; /* Center the container */
     }
 
-    /* Image and text container with side-by-side layout */
+    /* Profile layout container */
     .profile {
       display: flex;
-      align-items: center;
-      justify-content: center;
+      flex-direction: row; /* Align image and text side by side */
+      align-items: flex-start;
+      justify-content: flex-start;
       margin-top: 20px;
     }
 
+    /* Image Container */
     .image-container {
-      flex: 0 0 200px; /* Set fixed width for the image container */
       margin-right: 20px; /* Space between image and text */
     }
 
@@ -45,8 +46,7 @@
     }
 
     .text-container {
-      flex: 1; /* Allow the text to take the remaining space */
-      text-align: left;
+      text-align: left; /* Text aligned to the left */
     }
 
     h1 {
@@ -57,7 +57,6 @@
 
     .title {
       font-size: 1.3em; /* Slightly larger title */
-      text-align: center;
       color: #333;
     }
 
@@ -70,21 +69,21 @@
       line-height: 1.5;
     }
 
-    /* Links inside paragraphs should stay inline and have green color */
     p a {
       color: #008000; /* Green color for links */
-      font-size: inherit; /* Ensure links have the same font size as paragraph */
+      font-size: inherit;
       text-decoration: none;
-      display: inline; /* Prevent links from breaking into new lines */
+      display: inline;
     }
 
     p a:hover {
       text-decoration: underline;
     }
 
+    /* Social Icons Layout */
     .social-icons {
       display: flex;
-      justify-content: center;
+      justify-content: flex-start; /* Align social icons to the left */
       gap: 20px;
       margin-top: 20px;
     }
@@ -113,7 +112,7 @@
   <!-- Container for all content -->
   <div class="container">
 
-    <!-- Name centered above the image -->
+    <!-- Profile Name and Image Section -->
     <h1>Marc Foster</h1>
 
     <!-- Profile Image and Text Content Container -->
@@ -128,15 +127,15 @@
         <p class="title">Ph.D. Candidate</p>
         <p class="title">Massachusetts Institute of Technology - Woods Hole Oceanographic Institution</p>
         <p class="title">Environmental Chemistry</p>
-        <br>
 
         <p>Hi! My name is Marc Foster. I am a fourth-year Ph.D. candidate in the MIT/WHOI Joint Program. I work with <a href="https://scholar.google.com/citations?user=frpKM2EAAAAJ&hl=en" target="_blank">Dr. Desirée Plata</a> in the Civil and Environmental Engineering department at MIT. My work focuses on understanding the microbiology of polymer biodegradation. My interests are interdisciplinary and span environmental chemistry, biogeochemistry, and microbiology. I have previously received a Masters of Science in physical chemistry from the University of Oregon where I worked with <a href="https://scholar.google.com/citations?user=hPWTDRQAAAAJ&hl=en" target="_blank">Dr. Geraldine Richmond</a>. I received my Bachelors of Arts in Biochemistry, Biophysics, and Molecular Biology from Whitman College. <a href="mailto:fosterm@mit.edu">Contact me here</a> if you would like to get in touch!</p>
+
         <br>
         <p>Outside of lab I like to <a href="https://www.strava.com/athletes/29012833" target="_blank">train for half-marathons</a>, swim (mostly when I am injured), hike, cook, bake, <a href="https://www.goodreads.com/user/show/164854933-marc-foster" target="_blank">read</a>, and hang with my <a href="momo.png" target="_blank">cat</a>.</p>
       </div>
     </div>
 
-    <!-- Social Media Links Centered below the image -->
+    <!-- Social Media Links Section -->
     <div class="social-icons">
       <a href="https://scholar.google.com/citations?user=O4dazRoAAAAJ&hl=en" target="_blank">
         <img src="Google_Scholar_logo.png" alt="Google Scholar">
@@ -151,4 +150,5 @@
 
 </body>
 </html>
+
 
