--- a/index.html
+++ b/index.html
@@ -12,30 +12,29 @@
       font-family: Helvetica, Arial, sans-serif;
       margin: 0;
       padding: 0;
-      text-align: left; /* Align text to the left */
+      text-align: center; /* Center the text */
     }
 
     .container {
       display: flex; /* Enable flexbox layout */
-      align-items: flex-start; /* Align items to the top */
-      justify-content: flex-start; /* Align items to the left */
+      align-items: center; /* Align items vertically in the center */
+      justify-content: center; /* Center the container horizontally */
       flex-direction: column; /* Stack items vertically */
       max-width: 1200px; /* Max container width */
       margin: 0 auto; /* Center the container */
     }
 
-    /* Profile layout container */
     .profile {
       display: flex;
-      flex-direction: row; /* Align image and text side by side */
-      align-items: flex-start;
-      justify-content: flex-start;
+      flex-direction: column; /* Stack name, image, and social icons vertically */
+      align-items: center; /* Center align all elements horizontally */
+      justify-content: space-between; /* Space between name, image, and social icons */
+      height: 600px; /* Fixed height to distribute space evenly */
       margin-top: 20px;
     }
 
-    /* Image Container */
     .image-container {
-      margin-right: 20px; /* Space between image and text */
+      margin: 20px 0; /* Space above and below the image */
     }
 
     img {
@@ -46,7 +45,7 @@
     }
 
     .text-container {
-      text-align: left; /* Text aligned to the left */
+      text-align: center; /* Center text for title */
     }
 
     h1 {
@@ -58,6 +57,7 @@
     .title {
       font-size: 1.3em; /* Slightly larger title */
       color: #333;
+      text-align: center;
     }
 
     p {
@@ -80,10 +80,9 @@
       text-decoration: underline;
     }
 
-    /* Social Icons Layout */
     .social-icons {
       display: flex;
-      justify-content: flex-start; /* Align social icons to the left */
+      justify-content: center; /* Center the social icons */
       gap: 20px;
       margin-top: 20px;
     }
@@ -112,11 +111,11 @@
   <!-- Container for all content -->
   <div class="container">
 
-    <!-- Profile Name and Image Section -->
-    <h1>Marc Foster</h1>
-
-    <!-- Profile Image and Text Content Container -->
+    <!-- Profile Section with Name, Image, and Social Icons -->
     <div class="profile">
+      <!-- Name centered above the image -->
+      <h1>Marc Foster</h1>
+
       <!-- Image Container -->
       <div class="image-container">
         <img src="IMG_0176.jpg" alt="Marc Foster">
@@ -127,23 +126,24 @@
         <p class="title">Ph.D. Candidate</p>
         <p class="title">Massachusetts Institute of Technology - Woods Hole Oceanographic Institution</p>
         <p class="title">Environmental Chemistry</p>
+        <br>
 
         <p>Hi! My name is Marc Foster. I am a fourth-year Ph.D. candidate in the MIT/WHOI Joint Program. I work with <a href="https://scholar.google.com/citations?user=frpKM2EAAAAJ&hl=en" target="_blank">Dr. Desirée Plata</a> in the Civil and Environmental Engineering department at MIT. My work focuses on understanding the microbiology of polymer biodegradation. My interests are interdisciplinary and span environmental chemistry, biogeochemistry, and microbiology. I have previously received a Masters of Science in physical chemistry from the University of Oregon where I worked with <a href="https://scholar.google.com/citations?user=hPWTDRQAAAAJ&hl=en" target="_blank">Dr. Geraldine Richmond</a>. I received my Bachelors of Arts in Biochemistry, Biophysics, and Molecular Biology from Whitman College. <a href="mailto:fosterm@mit.edu">Contact me here</a> if you would like to get in touch!</p>
 
         <br>
         <p>Outside of lab I like to <a href="https://www.strava.com/athletes/29012833" target="_blank">train for half-marathons</a>, swim (mostly when I am injured), hike, cook, bake, <a href="https://www.goodreads.com/user/show/164854933-marc-foster" target="_blank">read</a>, and hang with my <a href="momo.png" target="_blank">cat</a>.</p>
       </div>
-    </div>
 
-    <!-- Social Media Links Section -->
-    <div class="social-icons">
-      <a href="https://scholar.google.com/citations?user=O4dazRoAAAAJ&hl=en" target="_blank">
-        <img src="Google_Scholar_logo.png" alt="Google Scholar">
-      </a>
-      <a href="https://www.linkedin.com/in/marc-foster-238a35102/" target="_blank">
-        <img src="LinkedIn_logo_initials.png" alt="LinkedIn">
-      </a>
-      <a href="Marc_Foster_CV_2025.pdf" target="_blank">CV</a>
+      <!-- Social Media Links centered below the image -->
+      <div class="social-icons">
+        <a href="https://scholar.google.com/citations?user=O4dazRoAAAAJ&hl=en" target="_blank">
+          <img src="Google_Scholar_logo.png" alt="Google Scholar">
+        </a>
+        <a href="https://www.linkedin.com/in/marc-foster-238a35102/" target="_blank">
+          <img src="LinkedIn_logo_initials.png" alt="LinkedIn">
+        </a>
+        <a href="Marc_Foster_CV_2025.pdf" target="_blank">CV</a>
+      </div>
     </div>
 
   </div>
